<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.relgram.app.app.view_models.EditProfileActivityViewModel" />
    </data>

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/edit_profile_background"
        tools:context=".view.activities.MainActivity">

        <include
            android:id="@+id/include"
            layout="@layout/toolbar_main" />

        <info.hoang8f.android.segmented.SegmentedGroup xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
            android:id="@+id/segmentedView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/include"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            segmentedgroup:sc_border_width="2dp"
            segmentedgroup:sc_checked_text_color="@color/white"
            segmentedgroup:sc_corner_radius="10dp"
            segmentedgroup:sc_tint_color="@color/colorPrimaryDark">

            <RadioButton
                android:id="@+id/gallery"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:padding="10dp"
                android:text="@string/gallery" />

            <RadioButton
                android:id="@+id/spouseMetaData"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:padding="10dp"
                android:text="@string/spouseMetaData" />

            <RadioButton
                android:id="@+id/myMetaData"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:padding="10dp"
                android:text="@string/myMetaData" />

            <RadioButton
                android:id="@+id/baseInfo"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:padding="10dp"
                android:text="@string/baseInfo" />


        </info.hoang8f.android.segmented.SegmentedGroup>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/segmentedView"
            android:id="@+id/mainFrame"
            android:layout_marginTop="10dp" />


    </RelativeLayout>

</layout>