<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.relgram.app.app.view_models.UpdateActivityViewModel" />
    </data>

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.activities.MainActivity">

        <include
            android:id="@+id/include"
            layout="@layout/toolbar_main" />

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            tools:context=".view.activities.MainActivity">


            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@mipmap/relgram" />

            <com.relgram.app.app.library.PersianTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/newVersionExist"
                android:textColor="@color/colorPrimaryDark" />

            <com.relgram.app.app.library.PersianTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@{viewModel.getYourVersion()}"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_xxlarge" />

            <com.relgram.app.app.library.PersianTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@{viewModel.getNewVersion()}"
                android:textColor="@color/colorCount"
                android:textSize="@dimen/text_size_xxlarge" />

            <com.relgram.app.app.library.PersianTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/changes"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_standard" />

            <com.relgram.app.app.library.PersianTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@{viewModel.change}"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_standard" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/downloadApp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_background"
                android:text="@string/downloadApp"
                android:textColor="@color/white" />
        </LinearLayout>


    </LinearLayout>
</layout>